--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 
-	<div class="py-5 px-10">
+	<div class="py-5 md:px-10 px-3">
 		<h1 class="md:text-3xl text-lg text-center font-bold text-red-600 mb-2">Emergency Contact</h1>
 		<h2 class="md:text-xl text-md font-semibold text-center text-red-600">Kontak Darurat</h2>
 
