--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				</div>
 				<div class="ms-5">
 					<h3 class="text-lg font-semibold">Puskesmas</h3>
-					<p><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
-					<p><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
 				</div>
 			</a>
 			<a href="tel:6281510030416" class="shadow-sm rounded-lg border-2 p-2 flex">
@@ -40,8 +40,8 @@
 				</div>
 				<div class="ms-5">
 					<h3 class="text-lg font-semibold">Polisi</h3>
-					<p><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
-					<p><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
 				</div>
 			</a>
 			<a href="tel:6281510030416" class="shadow-sm rounded-lg border-2 p-2 flex">
@@ -50,8 +50,8 @@
 				</div>
 				<div class="ms-5">
 					<h3 class="text-lg font-semibold">Pemadam Kebakaran</h3>
-					<p><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
-					<p><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
 				</div>
 			</a>
 			<a href="tel:6281510030416" class="shadow-sm rounded-lg border-2 p-2 flex">
@@ -60,8 +60,8 @@
 				</div>
 				<div class="ms-5">
 					<h3 class="text-lg font-semibold">Ambulance</h3>
-					<p><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
-					<p><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
 				</div>
 			</a>
 		</div>
