--- a/index.html
+++ b/index.html
@@ -28,40 +28,40 @@
 				<div class="bg-red-500 sha rounded-lg h-20 w-20 flex justify-center items-center">
 					<i class="fas text-3xl fa-fw fa-ambulance text-white"></i>
 				</div>
-				<div class="ms-5">
+				<div class="md:ms-5 ms-2">
 					<h3 class="text-lg font-semibold">Puskesmas</h3>
-					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
 				</div>
 			</a>
 			<a href="tel:6281510030416" class="shadow-sm rounded-lg border-2 p-2 flex">
 				<div class="bg-red-500 sha rounded-lg h-20 w-20 flex justify-center items-center">
 					<i class="fas text-3xl fa-fw fa-handcuffs text-white"></i>
 				</div>
-				<div class="ms-5">
+				<div class="md:ms-5 ms-2">
 					<h3 class="text-lg font-semibold">Polisi</h3>
-					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
 				</div>
 			</a>
 			<a href="tel:6281510030416" class="shadow-sm rounded-lg border-2 p-2 flex">
 				<div class="bg-red-500 sha rounded-lg h-20 w-20 flex justify-center items-center">
 					<i class="fas text-3xl fa-fw fa-fire-extinguisher text-white"></i>
 				</div>
-				<div class="ms-5">
+				<div class="md:ms-5 ms-2">
 					<h3 class="text-lg font-semibold">Pemadam Kebakaran</h3>
-					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
 				</div>
 			</a>
 			<a href="tel:6281510030416" class="shadow-sm rounded-lg border-2 p-2 flex">
 				<div class="bg-red-500 sha rounded-lg h-20 w-20 flex justify-center items-center">
 					<i class="fas text-3xl fa-fw fa-ambulance text-white"></i>
 				</div>
-				<div class="ms-5">
+				<div class="md:ms-5 ms-2">
 					<h3 class="text-lg font-semibold">Ambulance</h3>
-					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 815-1234-5678</p>
+					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jln Lorem ipsum dolor sit amet.</p>
 				</div>
 			</a>
 		</div>
