--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-	<div class="relative bg-cover h-72" style="background-image: url('header.jpg');">
+	<div class="relative bg-cover md:h-72 h-36" style="background-image: url('header.jpg');">
 		<div class="absolute z-9" style="top: 0;left: 0;right: 0;bottom: 0;background-color: rgba(0,0,0,.3)"></div>
 		<div class="flex justify-center items-center relative h-full z-10">
 			<div class="">
