--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 	<div class="relative bg-cover md:h-96 h-48 bg-center" style="background-image: url('header.jpg');">
 		<div class="absolute z-9" style="top: 0;left: 0;right: 0;bottom: 0;background-color: rgba(100,100,100,.5)"></div>
-		<div class="flex justify-center items-center relative h-full z-10">
-			<div class="">
+		<div class="flex justify-center items-end relative h-full z-10">
+			<div class="mb-10">
 				<h1 class="md:text-5xl text-xl font-bold text-center text-white drop-shadow-lg mb-2">Cisaat Help Center</h1>
 				<h2 class="md:text-xl text-md font-semibold text-center text-white drop-shadow-lg">Pusat Bantuan Desa Cisaat</h2>
 			</div>
