--- a/index.html
+++ b/index.html
@@ -23,43 +23,43 @@
 		<h1 class="md:text-3xl text-lg text-center font-bold text-red-600 mb-2">Emergency Contact</h1>
 		<h2 class="md:text-xl text-md font-semibold text-center text-red-600">Kontak Darurat</h2>
 
-		<div class="grid grid-cols-1 md:grid-cols-2 gap-5 mt-10">
-			<a href="tel:6283195695620" class="shadow-sm rounded-lg border-2 p-2 flex">
-				<div class="bg-red-500 sha rounded-lg h-20 w-20 flex justify-center items-center">
-					<i class="fas text-3xl fa-fw fa-ambulance text-white"></i>
+		<div class="grid grid-cols-1 lg:grid-cols-4 sm:grid-cols-2 gap-5 mt-10">
+			<a href="tel:6283195695620" class="shadow-sm rounded-lg border-2 p-2">
+				<div class="bg-red-500 sha rounded-lg h-32 w-full flex justify-center items-center">
+					<i class="fas text-5xl fa-fw fa-ambulance text-white"></i>
 				</div>
-				<div class="md:ms-5 ms-2">
-					<h3 class="text-lg font-semibold">Puskesmas dan Ambulance</h3>
+				<div class="md:m-3 ms-2 leading-10">
+					<h3 class="text-lg leading-10 font-semibold">Puskesmas dan Ambulance</h3>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 831-9569-5620</p>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jl. Palasari Dua - Babakan Gn., Palasari, Kec. Ciater, Kabupaten Subang, Jawa Barat 41281</p>
 				</div>
 			</a>
-			<a href="tel:628113110110" class="shadow-sm rouSnded-lg border-2 p-2 flex">
-				<div class="bg-red-500 sha rounded-lg h-20 w-20 flex justify-center items-center">
-					<i class="fas text-3xl fa-fw fa-handcuffs text-white"></i>
+			<a href="tel:628113110110" class="shadow-sm rounded-lg border-2 p-2">
+				<div class="bg-red-500 sha rounded-lg h-32 w-full flex justify-center items-center">
+					<i class="fas text-5xl fa-fw fa-handcuffs text-white"></i>
 				</div>
-				<div class="md:ms-5 ms-2">
-					<h3 class="text-lg font-semibold">Polisi</h3>
+				<div class="md:m-3 ms-2 leading-10">
+					<h3 class="text-lg leading-10 font-semibold">Polisi</h3>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (62) 811-3110-110</p>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jl. Mayjen Sutoyo No.29, Karanganyar, Kec. Subang, Kabupaten Subang, Jawa Barat 41211</p>
 				</div>
 			</a>
-			<a href="tel:0260411007815" class="shadow-sm rounded-lg border-2 p-2 flex">
-				<div class="bg-red-500 sha rounded-lg h-20 w-20 flex justify-center items-center">
-					<i class="fas text-3xl fa-fw fa-fire-extinguisher text-white"></i>
+			<a href="tel:0260411007815" class="shadow-sm rounded-lg border-2 p-2">
+				<div class="bg-red-500 sha rounded-lg h-32 w-full flex justify-center items-center">
+					<i class="fas text-5xl fa-fw fa-fire-extinguisher text-white"></i>
 				</div>
-				<div class="md:ms-5 ms-2">
-					<h3 class="text-lg font-semibold">Pemadam Kebakaran</h3>
+				<div class="md:m-3 ms-2 leading-10">
+					<h3 class="text-lg leading-10 font-semibold">Pemadam Kebakaran</h3>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> (026) 041-100-7815</p>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Jl ks. tubun, Cigadung, Kec. Subang, Kabupaten Subang, Jawa Barat 41211</p>
 				</div>
 			</a>
-			<a href="tel:112" class="shadow-sm rounded-lg border-2 p-2 flex">
-				<div class="bg-red-500 sha rounded-lg h-20 w-20 flex justify-center items-center">
-					<i class="fas text-3xl fa-fw fa-bell text-white"></i>
+			<a href="tel:112" class="shadow-sm rounded-lg border-2 p-2">
+				<div class="bg-red-500 sha rounded-lg h-32 w-full flex justify-center items-center">
+					<i class="fas text-5xl fa-fw fa-bell text-white"></i>
 				</div>
-				<div class="md:ms-5 ms-2">
-					<h3 class="text-lg font-semibold">Panggilan Darurat</h3>
+				<div class="md:m-3 ms-2 leading-10">
+					<h3 class="text-lg leading-10 font-semibold">Panggilan Darurat</h3>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-phone text-gray-400"></i> 112</p>
 					<p class="md:text-md text-sm"><i class="fas fa-fw fa-location-dot text-gray-400"></i> Indonesia</p>
 				</div>
