--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Cisaat Help Center</title>
+	<title>Cilimus Help Center</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -13,8 +13,8 @@
 		<div class="absolute z-9" style="top: 0;left: 0;right: 0;bottom: 0;background-color: rgba(100,100,100,.5)"></div>
 		<div class="flex justify-center items-end relative h-full z-10">
 			<div class="mb-10">
-				<h1 class="md:text-5xl text-xl font-bold text-center text-white drop-shadow-lg mb-2">Cisaat Help Center</h1>
-				<h2 class="md:text-xl text-md font-semibold text-center text-white drop-shadow-lg">Pusat Bantuan Desa Cisaat</h2>
+				<h1 class="md:text-5xl text-xl font-bold text-center text-white drop-shadow-lg mb-2">Cilimus Help Center</h1>
+				<h2 class="md:text-xl text-md font-semibold text-center text-white drop-shadow-lg">Pusat Bantuan Dusun Cilimus</h2>
 			</div>
 		</div>
 	</div>
